<?xml version="1.0"?>
<package format="2">
  <name>xview_slam</name>
  <version>0.0.0</version>
  <description>SLAM adaptation of the xview framework</description>
  <maintainer email="emilio@todo.todo">emilio</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>eigen_catkin</depend>
  <depend>gtsam_catkin</depend>
  <depend>roscpp</depend>
  <depend>mincurves</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  
</package>
